src/test/contracts/negative/bytes_literals.jsligo
const shame = () => {
  const x = bytes `foo` as nat;
  return x
}